--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,3 +12,7 @@ jobs:
           node-version: 18
       - run: npm install
       - run: node src/server.js
+    env:
+      MONGO_URI: mongodb://root:pass123@localhost:27017/test?authSource=admin
+      PORT: 3000
+
