--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,8 @@ jobs:
         with:
           node-version: 18
       - run: npm install
-      - run: node src/server.js
-    env:
-        MONGODB_URI: ${{ secrets.MONGO_URI }}
- 
-
+      - name: Run Server
+        run: node src/server.js
+        env:
+          MONGO_URI: ${{ secrets.MONGO_URI }}
+          PORT: ${{ secrets.PORT }}
